fix(security): Fix CORS origins and filter order to unblock production deployment